fixed align for add contents button in common.css
Former-commit-id: 5a9896a3709ca1df899c6fdb2d401c5e9c59bd66

--- a/css/layout/common.css
+++ b/css/layout/common.css
@@ -134,11 +134,11 @@ h1 /* main logo */ {
 {
     position:relative;
     width:130px;
-    height:33px;
+    height:32px;
     background:#ec6446;
     border:none;
     border-radius:3px;
-    margin-top:8px;
+    margin-top:9px;
     right:-45px;
 
     color:#ffffff;
